# Scaffolding

./: CMakeLists.txt  Doxyfile  gen-doc.sh
src/: ClassDefinition.cpp  ClassDefinition.hpp  Comment.cpp  Comment.hpp  Constructor.cpp  Constructor.hpp  CppClass.cpp  CppClass.hpp  CppFile.cpp  CppFile.hpp  DefaultConstructor.cpp  DefaultConstructor.hpp  DelAssignOp.cpp  DelAssignOp.hpp  DelCopyConstructor.cpp  DelCopyConstructor.hpp  Element.cpp  Element.hpp  Function.cpp  Function.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  IncludeMacro.cpp  IncludeMacro.hpp  Parameter.cpp  Parameter.hpp  PragmaOnce.cpp  PragmaOnce.hpp  VirtualDecon.cpp  VirtualDecon.hpp  main.cpp
tests/: hello.cpp  test-1.sh
